# xiaoyu_CF

./: AGENTS.md  PROJECT_GUIDE.md  README.md  THIRD_PARTY_NOTICES.md  analysis.py  environment.yml  llms.txt  pyproject.toml  xiaoyu_CF.py
cytoflow/: __init__.py  experiment.py
cytoflow/operations/: __init__.py  base_op_views.py  bleedthrough_linear.py  density.py  polygon.py  range.py
cytoflow/utility/: docstring.py  hlog_scale.py  scale.py
cytoflow/views/: __init__.py  base_views.py  densityplot.py  scatterplot.py
examples/: binding_assay.py  flow_analysis.py
examples/__marimo__/session/: binding_assay.py.json  marimo_template.py.json  plot_demo.py.json
fcsparser/: api.py  fcsparser.py
src/xiaoyu_CF/: DEFAULT_PLOT_STYLE.toml  __init__.py  _experiment.py  _fcsparser.py  _helpers.py  _operations.py  _utility.py  _views.py  flow_style.py
test/: package_smoke_summary.json  package_smoke_test.py
test/21Apr2024/: 21Apr2024 cytoflow plan.xlsx
test/21Apr2024/testGroup/: A1.fcs  A11.fcs  A12.fcs  A2.fcs  A3.fcs  A4.fcs  A5.fcs  A6.fcs  A7.fcs  A8.fcs  B11.fcs  B12.fcs  B5.fcs  B6.fcs  B7.fcs  B8.fcs  C11.fcs  C12.fcs  C5.fcs  C6.fcs  C7.fcs  C8.fcs  D11.fcs  D12.fcs  D5.fcs  D6.fcs  D7.fcs  D8.fcs
test/26Mar2025/: analysis-cell label.py
test/26Mar2025/HuaiDan-New Experiment-20250326-1722/: B2.fcs  C2.fcs  median_values.txt
test/HuaiDan-cell binding assay anti-His-20240417-2003/: A8.fcs  E8.fcs  H8.fcs  median_values.txt
